# codex_test

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-free-trend-report.yml
config/: sources.json
data/: manual_signals.md
docs/: banner_reference_style.md
scripts/: generate_executive_docx.py  generate_executive_html.py  generate_full_report_html.py  generate_missing_images.py  install_deps.ps1  resend_run_email.py  run_weekly.py
src/trend_banner_automation/: __init__.py  banner_composer.py  cli.py  config.py  docx_writer.py  emailer.py  executive_docx.py  executive_html.py  free_report.py  full_report_html.py  openai_ops.py  prompts.py  reporting.py  runner.py  sources.py  validation.py
